--- a/_sections/학부생을위한.md
+++ b/_sections/학부생을위한.md
@@ -12,7 +12,7 @@ order: 2
   * 확산방정식 (Diffusion Equation)에 대해서 소개하고 물리적인 관점에서 이러한 방정식들이 어떠한 형태로 일반화 될 수 있는 가를 논의한다. 그리고 더 나아가서 수학에서는 확산방정식에 관해 어떠한 연구를 진행하는지를 소개한다.
   
   
-# 수학, 금융, 그리고 정보기술
+<em> 수학, 금융, 그리고 정보기술 </em>
   * 수학 전공자가 금융과 정보기술 분야에서 어떤 활동을 하고 어떤 장점을 가질 수 있는지에 대해 강연자의 경험을 공유한다.
   
   
