--- a/_sections/학부생을위한.md
+++ b/_sections/학부생을위한.md
@@ -4,7 +4,7 @@ icon: fa-check
 order: 2
 ---
 
-# 한양대학교 자연과학관 205호 오후 4:00 - 5:00
+# 한양대학교 자연과학관 205호 오후 4:00 - 5:00 #
 
 
 
@@ -17,10 +17,11 @@ order: 2
   
   
 # 데이터 싸이언티스트에 대하여
+
   * Glassdoor의 조사에 따르면, 데이터 사이언티스트는 미국 최고의 10개 작업중 1위를 차지할 만큼, 관심과 선호를 받고 있다. 한국에서도 빅데이터, AI, 데이터 싸이언스 등이 많은 사람들로 부터 관심을 받고 있는데, 데이터 사이언티스트 들은 어떤 일을 하는지, 데이터 사이언티스트가 되려면 어떤 준비를 해야하는지를 알아본다.
   
   
-# Chromatic Symmetric functions
+Chromatic Symmetric functions
   * '색 대칭함수'는 그래프를 채색하는 방법들로부터 자연스럽게 정의되는 대칭함수이다. 이들 대칭함수를 대상으로 하는 Stanley-Steabridge conjecture를 조합적, 대수적 그리고 기하학의 관점에서 이해하는 방법을 소개한다. 이를 통하여 서로 다른 분야의 수학이 색대칭함수를 중심으로 조화롭게 연결됨을 확인할 수 있을 것이다.
   
  
