--- a/_sections/학부생을위한.md
+++ b/_sections/학부생을위한.md
@@ -6,9 +6,9 @@ order: 2
 
 # 한양대학교 자연과학관 205호 오후 4:00 - 5:00 #
 
+<br><br>
 
-
-Diffusion and Regularity
+*Diffusion and Regularity*
   * 확산방정식 (Diffusion Equation)에 대해서 소개하고 물리적인 관점에서 이러한 방정식들이 어떠한 형태로 일반화 될 수 있는 가를 논의한다. 그리고 더 나아가서 수학에서는 확산방정식에 관해 어떠한 연구를 진행하는지를 소개한다.
   
   
