--- a/_sections/암호론.md
+++ b/_sections/암호론.md
@@ -6,12 +6,29 @@ order: 3
 
 연산검증 기법 소개 : The GKR Protocol
 ================================
-9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)
-----------------------------------------------
+# 9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)
 
 TBA
-===
-10/22 (화) 702호 17:00 ~ 18:00 (*제이마플 이주희 박사)
----------------
+========
+# 10/22 (화) 702호 17:00 ~ 18:00 (*제이마플 이주희 박사)
 
-Thres
+Threshold ECDSA with Applications to Cryptocurrency Custody
+===========================================================
+# 10/25 (금) 702호 10:30 ~ 11:30 (*Medium 정희원 박사)
+
+Federated Learning & Privacy
+============================
+# 10/25 (금) B116호 13:30 ~ 14:30 (*삼성 리서치 김성욱 박사)
+
+Privacy Preserving CNN Prediction
+=================================
+# 10/25 (금) B116호 14:30 ~ 15:30 (*삼성 리서치 김진수 박사)
+
+TBA
+========
+# 10/29 (화) 117호 13:00 ~ 14:00 (*중앙대학교 응용통계학과)
+
+Dynamic Searchable Symmetric Encryption with Forward Security
+=============================================================
+# 11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)
+
