--- a/_sections/학부생을위한.md
+++ b/_sections/학부생을위한.md
@@ -6,7 +6,7 @@ order: 2
 
 # 한양대학교 자연과학관 205호 오후 4:00 - 5:00 #
 
-<br><br>
+<br>
 
 *Diffusion and Regularity*
   * 확산방정식 (Diffusion Equation)에 대해서 소개하고 물리적인 관점에서 이러한 방정식들이 어떠한 형태로 일반화 될 수 있는 가를 논의한다. 그리고 더 나아가서 수학에서는 확산방정식에 관해 어떠한 연구를 진행하는지를 소개한다.
@@ -27,3 +27,6 @@ Chromatic Symmetric functions
  
 # Deep Learning Research in Industry
   * The recent rise of deep learning has made impressive changes to academic and industrial research. Even though we have heard of the words "Deep Learning" during the last several years, but it's a bit difficult to imagine how it actually works. In this talk, we will briefly review the basic concepts of machine learning and deep learning, and find out some real-world applications on which deep learning would be effective. And we will look intro recent trends in deep learning, and try to explore what mathematicians can contribute to the development of deep learning research in academia and industry
+  
+
+![Alt text](/암호포스터.pdf)
