--- a/_sections/암호론.md
+++ b/_sections/암호론.md
@@ -6,11 +6,11 @@ order: 3
 
 연산검증 기법 소개 : The GKR Protocol
 ================================
-# 9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)
+## 9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)
 
 TBA
 ========
-# 10/22 (화) 702호 17:00 ~ 18:00 (*제이마플 이주희 박사)
+## 10/22 (화) 702호 17:00 ~ 18:00 (*제이마플 이주희 박사)
 
 Threshold ECDSA with Applications to Cryptocurrency Custody
 ===========================================================
