--- a/_sections/학부생을위한.md
+++ b/_sections/학부생을위한.md
@@ -29,4 +29,5 @@ Chromatic Symmetric functions
   * The recent rise of deep learning has made impressive changes to academic and industrial research. Even though we have heard of the words "Deep Learning" during the last several years, but it's a bit difficult to imagine how it actually works. In this talk, we will briefly review the basic concepts of machine learning and deep learning, and find out some real-world applications on which deep learning would be effective. And we will look intro recent trends in deep learning, and try to explore what mathematicians can contribute to the development of deep learning research in academia and industry
   
 
-![Alt text](/암호포스터.pdf)
+<!--- ![Alt text](/암호포스터.pdf)
+--->
