--- a/_sections/암호론.md
+++ b/_sections/암호론.md
@@ -31,4 +31,4 @@ Dynamic Searchable Symmetric Encryption with Forward Security
 =============================================================
 # 11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)
 
-![Alt text](/2.jpg)
+![Alt text](6sephiruth.github.io/_sections/2.jpg)
