--- a/_sections/암호론.md
+++ b/_sections/암호론.md
@@ -20,9 +20,9 @@ order: 3
  10/25 (금) B116호 14:30 ~ 15:30 (*삼성 리서치 김진수 박사)
 <br>
 ## TBA
- 10/29 (화) 117호 13:00 ~ 14:00 (*중앙대학교 응용통계학과)
+ 10/29 (화) 117호 13:00 ~ 14:00 (*중앙대학교 응용통계학과 곽일엽 교수)
 <br>
 ## Dynamic Searchable Symmetric Encryption with Forward Security
  11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)
 
-![2](./_sections/2.jpg)
+![2](/_sections/2.jpg)
