--- a/_sections/암호론.md
+++ b/_sections/암호론.md
@@ -24,5 +24,6 @@ order: 3
 <br>
 ## Dynamic Searchable Symmetric Encryption with Forward Security
  11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)
-
+<body>
 <img src=/_sections/2.jpg>
+</body>
